# midas-journal-317

Source/: CMakeLists.txt  itkDMFFDLabeledPointSetRegistrationFilter.h  itkDMFFDLabeledPointSetRegistrationFilter.txx  itkDMFFDLabeledPointSetRegistrationFilterTest.cxx  itkJensenHavrdaCharvatTsallisLabeledPointSetMetric.h  itkJensenHavrdaCharvatTsallisLabeledPointSetMetric.txx
Source/Data/: frown.vtk  psr_1WarpedPoints.vtk  psr_2WarpedPoints.vtk  smile.vtk  smile_test.txt  sphere.vtk  square.vtk
Source/JHCT/: itkDecomposeTensorFunction.txx  itkGaussianProbabilityDensityFunction.txx  itkJensenHavrdaCharvatTsallisPointSetMetric.h  itkJensenHavrdaCharvatTsallisPointSetMetric.txx  itkLabeledPointSetFileReader.h  itkLabeledPointSetFileReader.txx  itkLabeledPointSetFileWriter.h  itkLabeledPointSetFileWriter.txx  itkManifoldParzenWindowsPointSetFunction.h  itkManifoldParzenWindowsPointSetFunction.txx  itkPointSetFunction.h  itkPointSetFunction.txx
Source/Utilities/: itkVectorImageFileReader.h  itkVectorImageFileReader.txx
__MACOSX/Source/: ._CMakeLists.txt  ._itkBSplineControlPointImageFilter.txx  ._itkDMFFDLabeledPointSetRegistrationFilter.h  ._itkDMFFDLabeledPointSetRegistrationFilter.txx  ._itkDMFFDLabeledPointSetRegistrationFilterTest.cxx
__MACOSX/Source/JHCT/: ._itkDecomposeTensorFunction.txx  ._itkManifoldParzenWindowsPointSetFunction.h  ._itkManifoldParzenWindowsPointSetFunction.txx
